Week of 20190107-11.md updated from https://stackedit.io/

--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -8,3 +8,6 @@
 after incoming Client formatting undid my HH Name Formatting settings, I recreated the rules and refreshed.  
 
 #### Quarterly Goals
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbLTE5MTY4Nzc0OThdfQ==
+-->
