Week of 20190107-11.md updated from https://stackedit.io/

--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -1,13 +1,17 @@
 ## Week of 20190107-11
 
 ### Routine Tasks
+ - Finance reconciliations
+ - Weekly Data Cleanup
+ - Letter Generation and Record Updates
 
-### SF Issues to tackle
-
+### 3 Big SF Issues to assess/tackle: 
+1. Move Donations and similar record when me
 #### Last week's SF Issues
 after incoming Client formatting undid my HH Name Formatting settings, I recreated the rules and refreshed.  
 
 #### Quarterly Goals
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MTY4Nzc0OThdfQ==
+eyJoaXN0b3J5IjpbLTE0NzAyODkxODAsLTE5MTY4Nzc0OThdfQ
+==
 -->
