Week of 20190107-11.md updated from https://stackedit.io/

--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -6,12 +6,14 @@
  - Letter Generation and Record Updates
 
 ### 3 Big SF Issues to assess/tackle: 
-1. Move Donations and similar record when me
+1. Research process to move Donations and similar record when merging Contacts
+2. Extracting GW Notes regarding Walk Captains and Mailings
+3. Assess household data discrepancies resulting from Client data import
 #### Last week's SF Issues
 after incoming Client formatting undid my HH Name Formatting settings, I recreated the rules and refreshed.  
 
 #### Quarterly Goals
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NzAyODkxODAsLTE5MTY4Nzc0OThdfQ
+eyJoaXN0b3J5IjpbLTEyMDA1NDEwODMsLTE5MTY4Nzc0OThdfQ
 ==
 -->
