--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -9,11 +9,13 @@
 1. Research process to move Donations and similar record when merging Contacts
 2. Extracting GW Notes regarding Walk Captains and Mailings
 3. Assess household data discrepancies resulting from Client data import
-
-#### Last week's SF Issues
-after incoming Client formatting undid my HH Name Formatting settings, I recreated the rules and refreshed.  
+---
+#### Last Week's Summary:
+Routine: 
+- imported gifts from DonorDrive and Class 
+- after incoming Client formatting undid my HH Name Formatting settings, I recreated the rules and refreshed.  
 
 #### Quarterly Goals
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzQ2OTYxMTksLTE5MTY4Nzc0OThdfQ==
+eyJoaXN0b3J5IjpbLTQ1MDM1OTM1NSwtMTkxNjg3NzQ5OF19
 -->
