Week of 20190107-11.md updated from https://stackedit.io/

--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -4,6 +4,7 @@
  - Finance reconciliations
  - Weekly Data Cleanup
  - Letter Generation and Record Updates
+ - Gift Entry
 
 ### 3 Big SF Issues to assess/tackle: 
 1. Research process to move Donations and similar record when merging Contacts
@@ -12,10 +13,12 @@
 ---
 #### Last Week's Summary:
 Routine: 
-- imported gifts from DonorDrive and Class 
-- after incoming Client formatting undid my HH Name Formatting settings, I recreated the rules and refreshed.  
+- Refined import process while importing gifts from DonorDrive and Classy
+- Refined letter generation process for standard vs tribute gifts while generating donation receipts
+- Rereated HH Name Formatting settingsafter incoming Client formatting undid my HH Name Formatting settings, I recreated the rules and refreshed.  
 
 #### Quarterly Goals
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ1MDM1OTM1NSwtMTkxNjg3NzQ5OF19
+eyJoaXN0b3J5IjpbLTEzMzMwNDA2OTMsLTE5MTY4Nzc0OThdfQ
+==
 -->
