Week of 20190107-11.md updated from https://stackedit.io/

--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -1,10 +1,12 @@
-## Week of 20190107-11
+## Week of 20190107
 
 ### Routine Tasks
+ - Report to finance: Classy gifts  
  - Finance reconciliations
  - Weekly Data Cleanup
- - Letter Generation and Record Updates
  - Gift Entry
+ - Letter Generation and Record Updates
+
 
 ### 3 Big SF Issues to assess/tackle: 
 1. Research process to move Donations and similar record when merging Contacts
@@ -15,10 +17,11 @@
 Routine: 
 - Refined import process while importing gifts from DonorDrive and Classy
 - Refined letter generation process for standard vs tribute gifts while generating donation receipts
-- Rereated HH Name Formatting settingsafter incoming Client formatting undid my HH Name Formatting settings, I recreated the rules and refreshed.  
+- Recreated HH Name Formatting settings after incoming Client formatting undid my  rules
+- Report to finance: DonorDrive gifts  
 
 #### Quarterly Goals
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMzMwNDA2OTMsLTE5MTY4Nzc0OThdfQ
+eyJoaXN0b3J5IjpbLTE0ODYzMDYxMTMsLTE5MTY4Nzc0OThdfQ
 ==
 -->
