Week of 20190107-11.md updated from https://stackedit.io/

--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -20,8 +20,17 @@ Routine:
 - Recreated HH Name Formatting settings after incoming Client formatting undid my  rules
 - Report to finance: DonorDrive gifts  
 
+Status on Last Week's big SF issues: 
+Extra SF issues addressed:
+
+1.  Classy testing, support oversight
+2.  SF learning about Campaigns
+3.  Reworking tribute donation workflow to accommodate new SF limitations (can’t notify donor of gift until the gift is entered into system)
+
 #### Quarterly Goals
+*By midQ3:* Engagement Records, Mailer Process, Registration, Refined Gift Processing, 2 Lessons, Start Documentation
+By endQ4: Refined volunteer system, Reporting and Dashboards, Donor-Driven Info Updating, 2 Lessons, Plan for Client Services
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0ODYzMDYxMTMsLTE5MTY4Nzc0OThdfQ
+eyJoaXN0b3J5IjpbLTE3MDc2Mjk4NDEsLTE5MTY4Nzc0OThdfQ
 ==
 -->
