--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -17,20 +17,19 @@
 Routine: 
 - Refined import process while importing gifts from DonorDrive and Classy
 - Refined letter generation process for standard vs tribute gifts while generating donation receipts
-- Recreated HH Name Formatting settings after incoming Client formatting undid my  rules
 - Report to finance: DonorDrive gifts  
 
 Status on Last Week's big SF issues: 
+1. 
 Extra SF issues addressed:
-
-1.  Classy testing, support oversight
-2.  SF learning about Campaigns
-3.  Reworking tribute donation workflow to accommodate new SF limitations (can’t notify donor of gift until the gift is entered into system)
+2.  Classy testing, support oversight
+3.  SF learning about Campaigns
+4. Recreated HH Name Formatting settings after incoming Client formatting undid my  rules
+5.  Reworking tribute donation workflow to accommodate new SF limitations (can’t notify donor of gift until the gift is entered into system)
 
 #### Quarterly Goals
 *By midQ3:* Engagement Records, Mailer Process, Registration, Refined Gift Processing, 2 Lessons, Start Documentation
-By endQ4: Refined volunteer system, Reporting and Dashboards, Donor-Driven Info Updating, 2 Lessons, Plan for Client Services
+*By endQ4:* Refined volunteer system, Reporting and Dashboards, Donor-Driven Info Updating, 2 Lessons, Plan for Client Services
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MDc2Mjk4NDEsLTE5MTY4Nzc0OThdfQ
-==
+eyJoaXN0b3J5IjpbMTc3NjgzNTM3NywtMTkxNjg3NzQ5OF19
 -->
