Week of 20190107-11.md updated from https://stackedit.io/

--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -22,7 +22,7 @@ Routine:
 - Report to finance: DonorDrive gifts  
 
 Status on Last Week's big SF issues: 
-1. 
+1. Testing 
 Extra SF issues addressed:
 2.  Classy testing, support oversight
 3.  SF learning about Campaigns
@@ -33,5 +33,6 @@ Extra SF issues addressed:
 *By midQ3:* Engagement Records, Mailer Process, Registration, Refined Gift Processing, 2 Lessons, Start Documentation
 *By endQ4:* Refined volunteer system, Reporting and Dashboards, Donor-Driven Info Updating, 2 Lessons, Plan for Client Services
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjQ3NTMzNDUzLC0xOTE2ODc3NDk4XX0=
+eyJoaXN0b3J5IjpbLTE1NTM3NzIzNTUsMjQ3NTMzNDUzLC0xOT
+E2ODc3NDk4XX0=
 -->
