--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -22,17 +22,18 @@ Routine:
 - Report to finance: DonorDrive gifts  
 
 Status on Last Week's big SF issues: 
-1. Testing 
+1. Assess moving donations process.
+2. Im
 Extra SF issues addressed:
-2.  Classy testing, support oversight
-3.  SF learning about Campaigns
-4. Recreated HH Name Formatting settings after incoming Client formatting undid my  rules
-5.  Reworking tribute donation workflow to accommodate new SF limitations (can’t notify donor of gift until the gift is entered into system)
+3.  Classy testing, support oversight
+4.  SF learning about Campaigns
+5. Recreated HH Name Formatting settings after incoming Client formatting undid my  rules
+6.  Reworking tribute donation workflow to accommodate new SF limitations (can’t notify donor of gift until the gift is entered into system)
 
 #### Quarterly Goals
 *By midQ3:* Engagement Records, Mailer Process, Registration, Refined Gift Processing, 2 Lessons, Start Documentation
 *By endQ4:* Refined volunteer system, Reporting and Dashboards, Donor-Driven Info Updating, 2 Lessons, Plan for Client Services
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NTM3NzIzNTUsMjQ3NTMzNDUzLC0xOT
-E2ODc3NDk4XX0=
+eyJoaXN0b3J5IjpbNzc1NTg4ODEsMjQ3NTMzNDUzLC0xOTE2OD
+c3NDk4XX0=
 -->
