Week of 20190107-11.md updated from https://stackedit.io/

--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -23,17 +23,19 @@ Routine:
 
 Status on Last Week's big SF issues: 
 1. Assess moving donations process.
-2. Im
+2. Assess merging contacts process. 
+3. Simplify picklists
+
 Extra SF issues addressed:
-3.  Classy testing, support oversight
-4.  SF learning about Campaigns
-5. Recreated HH Name Formatting settings after incoming Client formatting undid my  rules
-6.  Reworking tribute donation workflow to accommodate new SF limitations (can’t notify donor of gift until the gift is entered into system)
+4.  Classy testing, support oversight
+5.  SF learning about Campaigns
+6. Recreated HH Name Formatting settings after incoming Client formatting undid my  rules
+7.  Reworking tribute donation workflow to accommodate new SF limitations (can’t notify donor of gift until the gift is entered into system)
 
 #### Quarterly Goals
 *By midQ3:* Engagement Records, Mailer Process, Registration, Refined Gift Processing, 2 Lessons, Start Documentation
 *By endQ4:* Refined volunteer system, Reporting and Dashboards, Donor-Driven Info Updating, 2 Lessons, Plan for Client Services
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzc1NTg4ODEsMjQ3NTMzNDUzLC0xOTE2OD
-c3NDk4XX0=
+eyJoaXN0b3J5IjpbMTIyNzg3MzU0MCwyNDc1MzM0NTMsLTE5MT
+Y4Nzc0OThdfQ==
 -->
