--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -6,7 +6,7 @@
  - Weekly Data Cleanup
  - Gift Entry
  - Letter Generation and Record Updates
-
+ - Start basic SF documentation
 
 ### 3 Big SF Issues to assess/tackle: 
 1. Research process to move Donations and similar record when merging Contacts
@@ -24,7 +24,7 @@ Routine:
 Status on Last Week's big SF issues: 
 1. Assess moving donations process.
 2. Assess merging contacts process. 
-3. Simplify picklists
+3. Understand picklist behavior, 
 
 Extra SF issues addressed:
 4.  Classy testing, support oversight
@@ -33,9 +33,9 @@ Extra SF issues addressed:
 7.  Reworking tribute donation workflow to accommodate new SF limitations (can’t notify donor of gift until the gift is entered into system)
 
 #### Quarterly Goals
-*By midQ3:* Engagement Records, Mailer Process, Registration, Refined Gift Processing, 2 Lessons, Start Documentation
-*By endQ4:* Refined volunteer system, Reporting and Dashboards, Donor-Driven Info Updating, 2 Lessons, Plan for Client Services
+*By midQ3:* Engagement Records, Mailer Process, Registration, Refined Gift Processing, Start Documentation
+*By endQ4:* Refined volunteer system, Reporting and Dashboards, Donor-Driven Info Updating
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIyNzg3MzU0MCwyNDc1MzM0NTMsLTE5MT
+eyJoaXN0b3J5IjpbLTMzNjA0NzU5NSwyNDc1MzM0NTMsLTE5MT
 Y4Nzc0OThdfQ==
 -->
