--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -24,7 +24,7 @@ Routine:
 Status on Last Week's big SF issues: 
 1. Assess moving donations process.
 2. Assess merging contacts process. 
-3. Understand picklist behavior, 
+3. Understand picklist behavior, added custom fields to accommodate issues
 
 Extra SF issues addressed:
 4.  Classy testing, support oversight
@@ -36,6 +36,6 @@ Extra SF issues addressed:
 *By midQ3:* Engagement Records, Mailer Process, Registration, Refined Gift Processing, Start Documentation
 *By endQ4:* Refined volunteer system, Reporting and Dashboards, Donor-Driven Info Updating
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMzNjA0NzU5NSwyNDc1MzM0NTMsLTE5MT
-Y4Nzc0OThdfQ==
+eyJoaXN0b3J5IjpbNDg3ODU2NDMzLDI0NzUzMzQ1MywtMTkxNj
+g3NzQ5OF19
 -->
