Week of 20190107-11.md updated from https://stackedit.io/

--- a/Week of 20190107-11.md
+++ b/Week of 20190107-11.md
@@ -1,4 +1,4 @@
-## Week of 20190107
+## Carlyn's Weekly Outlook for 20190107
 
 ### Routine Tasks
  - Report to finance: Classy gifts  
@@ -36,6 +36,6 @@ Extra SF issues addressed:
 *By midQ3:* Engagement Records, Mailer Process, Registration, Refined Gift Processing, Start Documentation
 *By endQ4:* Refined volunteer system, Reporting and Dashboards, Donor-Driven Info Updating
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDg3ODU2NDMzLDI0NzUzMzQ1MywtMTkxNj
+eyJoaXN0b3J5IjpbNzkzOTE0NjE0LDI0NzUzMzQ1MywtMTkxNj
 g3NzQ5OF19
 -->
